--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -6,6 +6,7 @@
   border-right: 2px solid #ffffff;
   font-family: $title-font-family;
   font-size: 20px;
+  max-width: 100%;
 
   a {
     text-decoration: none;
