--- a/src/index.scss
+++ b/src/index.scss
@@ -56,6 +56,7 @@ h5 {
     url(./images/background_image.jpg) center;
   background-size: cover;
   margin-bottom: 20px;
+  min-height: 100%x;
 
   h2 {
     margin-bottom: 40px;
@@ -113,6 +114,7 @@ h5 {
       border-radius: 4px;
       cursor: pointer;
       width: 50%;
+      margin-top: 20px;
 
       &:hover {
         background-color: #ff48c5;
