--- a/src/index.scss
+++ b/src/index.scss
@@ -37,6 +37,7 @@ h5 {
     flex: 4;
     display: flex;
     flex-direction: column;
+    background-color: white;
   }
 
   .RightNav {
@@ -82,7 +83,6 @@ h5 {
 
 .Registration,
 .Login {
-  background-color: white;
   display: block;
   text-align: center;
 
@@ -127,38 +127,54 @@ h5 {
   color: $title-color;
 }
 
-.Home {
-  background-color: white;
-
+.Home .Profile {
   svg {
-    cursor: pointer;
+    cursor: pointer !important;
+  }
+}
+
+.PostCard {
+  margin-bottom: 60px;
+  width: 100%;
+  background-color: $background-color;
+  padding: 40px 60px 40px;
+
+  a {
+    text-decoration: none;
+    color: $title-color;
+    font-weight: bold !important;
+    font-family: $title-font-family;
+    &:hover {
+      color: $text-color;
+      cursor: pointer;
+    }
+  }
+  .PostCard_content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
   }
 
-  .PostCard {
-    margin-bottom: 60px;
-    width: 100%;
-    background-color: $background-color;
-    padding: 40px 60px 40px;
+  .PostCard_footer {
+    color: $text-muted-color !important;
+  }
+}
 
-    a {
-      text-decoration: none;
-      color: $title-color;
-      font-weight: bold !important;
-      font-family: $title-font-family;
-      &:hover {
-        color: $text-color;
-        cursor: pointer;
-      }
-    }
-    .PostCard_content {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      width: 100%;
-    }
+.NewPost textarea {
+  width: 75%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 4px solid $background-color;
+  border-radius: 20px;
+  box-sizing: border-box;
+}
 
-    .PostCard_footer {
-      color: $text-muted-color !important;
-    }
+.NewPost {
+  margin-bottom: 80px;
+  margin-top: 50px;
+  svg {
+    cursor: pointer;
   }
 }
